adjustment to nerf pyramid

--- a/stadtrallye.tex
+++ b/stadtrallye.tex
@@ -99,8 +99,8 @@ Anschließend kann der Abend beim Spieleabend der Psychologen am Psychologischen
 \section*{Stationsaufgaben}
 \subsection*{Bota}
 \begin{questions}
-\question[10-50] Baut eine Menschenpyramide. \\
-Dabei gibt es 10 Punkte pro Ebene bzw. 50 Punkte bei 4 Ebenen. Ihr dürft Euch für die Bewältigung dieser Aufgabe mit anderen Gruppen zusammentun, aber brecht Euch bitte nichts!
+\question[2-32] Baut eine Menschenpyramide. \\
+Dabei gibt es $2n^2$ Punkte bei $n$ Ebenen bzw. max 32 Punkte bei 4 Ebenen. Ihr dürft Euch für die Bewältigung dieser Aufgabe mit anderen Gruppen zusammentun, aber brecht Euch bitte nichts!
 
 \end{questions}
 
@@ -152,7 +152,7 @@ Findet das Labor, macht ein Bild und zeigt darauf eure Liebe zur Wissenschaft.
 \begin{questions}
 	\question[10] Schreibt ein Liebesgedicht für Tübingen und tragt es eurem Betreuer vor
 	\question[20] Performt eine Choreografie zum Klassiker "Tübingen warum bist du so hügelig"
-	\question[Schnupfen + 50] Geht im Neckar baden (min. 50\% der Körperfläche müssen bedeckt sein
+	\question[Schnupfen + 50] Geht im Neckar baden (min. 50\% der Körperfläche müssen bedeckt sein)
 
 \end{questions}
 \vspace{15mm}
